examples/test/testpolicy8667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8667
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key15: value5
      key47: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
          key21: value8
      podSelector:
        matchLabels:
          key9: value26
          key13: value9
          key41: value38
